MapTo database setting support and other stuff

--- a/x360ce.App/MainForm.resx
+++ b/x360ce.App/MainForm.resx
@@ -124,80 +124,80 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADy
-        EAAAAk1TRnQBSQFMAgEBBQEAAZABAAGQAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/ACEAAQsBUAFjAf8BFAFbAYIB/wEXAWIBiQH/ARYBYAGIAf8BFgFg
-        AYgB/wEWAWABiAH/ARYBYAGIAf8BFwFiAYkB/wEUAVsBggH/AQsBUQFkAf/YAAEPAVYBawH/AWkB5wL/
-        AYYB7wL/AYUB7gL/AYUB7gL/AYUB7gL/AYUB7gL/AYYB7wL/AWgB6AL/AQ8BVgFrAf/YAAEOAVUBagH/
-        AVwB5wH+Af8BZQHqAfwB/wFkAekB+wH/AWQB6QH7Af8BZAHpAfsB/wFkAekB+wH/AWUB6gH8Af8BXAHn
-        Af4B/wEOAVUBagH/2AABCgFOAWEB/wFMAc4B5gH/AVAB0AHiAf8BTwHPAeIB/wFPAc8B4gH/AU8BzwHi
-        Af8BTwHPAeIB/wFQAdAB4gH/AUsBzwHmAf8BCAFOAWEB/9gAAQMBRgFaAf8BOQG4AdEB/wE6AbgBzgH/
-        AToBtwHNAf8BOgG3Ac0B/wE6AbcBzQH/AToBtwHNAf8BOgG4Ac4B/wE5AbgB0QH/AQMBRgFaAf/ZAAFA
-        AVIB/wEpAaIBugH/ASYBngG2Af8BIgGdAbQB/wEiAZ0BtAH/ASIBnQG0Af8BIgGdAbQB/wEmAZ4BtgH/
-        ASkBogG6Af8BAAFAAVIB/9kAATcBSQH/AUEBogG2Af8BSQGkAbYB/wFIAaIBtQH/AUYBogG1Af8BRgGi
-        AbUB/wFIAaIBtQH/AUkBpAG2Af8BQQGiAbYB/wEAATkBSwH/2QABLwFBAf8BXQGoAbgB/wGCAbIBvwH/
-        AYABsAG+Af8BgAGwAb4B/wGAAbABvgH/AYABsAG+Af8BggGyAb8B/wFdAagBuAH/AQABMAFCAf/ZAAEo
-        ATgB/wFdAaIBsAH/AZABtgHBAf8BjgG0Ab8B/wGOAbQBvwH/AY4BtAG/Af8BjgG0Ab8B/wGQAbYBwQH/
-        AV0BogGwAf8BAAEnATcB/9kAASMBMgH/AQABJAEzAf8BAAEkATMB/wEAASQBMwH/AQABJAEzAf8BAAEk
-        ATMB/wEAASQBMwH/AQABJAEzAf8BAAEkATMB/wEAASQBMwH//wD/AP8A/wD/AP8A3gABUwE0AQUB/wFi
-        ATwBCgH/AWgBQQEMAf8BaAFAAQwB/wFoAUABDAH/AWgBQAEMAf8BaAFAAQwB/wFoAUEBDAH/AWIBPAEK
-        Af8BVAE0AQUB/xgAAQkBUQEdAf8BDgFgASQB/wEQAWUBJgH/AQ8BZQEmAf8BDwFlASYB/wEPAWUBJgH/
-        AQ8BZQEmAf8BEAFlASYB/wEOAWABJAH/AQkBUgEdAf8YAAFFAT8BNgH/AU4BRwE+Af8BVAFNAUMB/wFU
-        AU0BQwH/AVQBTQFDAf8BVAFNAUMB/wFUAU0BQwH/AVQBTQFDAf8BTgFHAT4B/wFFAT8BNgH/GAACCwFj
-        Af8BFQEUAYIB/wIXAYkB/wEXARYBiAH/ARcBFgGIAf8BFwEWAYgB/wEXARYBiAH/AhcBiQH/ARUBFAGC
-        Af8CCwFkAf8YAAFbATgBCAL/AcIBUQL/AcoBYgH/Af4ByQFhAf8B/gHJAWEB/wH+AckBYQH/Af4ByQFh
-        Av8BygFiAv8BwQFRAf8BXAE4AQgB/xgAAQwBWQEgAf8BVAH/AZoB/wFhAf8BqwH/AV8B/wGqAf8BXwH/
-        AaoB/wFfAf8BqgH/AV8B/wGqAf8BYQH/AasB/wFUAf8BmgH/AQwBWQEiAf8YAAFKAUQBOwH/AdsBzwG2
-        Af8B4QHWAbsB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeEB1gG7Af8B2wHOAbYB/wFK
-        AUMBOgH/GAABEAEPAWsB/wFpAYAC/wGGAZEC/wGFAY8C/wGFAY8C/wGFAY8C/wGFAY8C/wGGAZEC/wFo
-        AYAC/wEQAQ8BawH/GAABWgE3AQgB/wHvAbEBTAH/Ae0BuAFaAf8B7AG3AVkB/wHsAbcBWQH/AewBtwFZ
-        Af8B7AG3AVkB/wHtAbgBWgH/Ae8BsQFMAf8BWgE2AQgB/xgAAQoBVwEfAf8BTAHpAZEB/wFXAeYBnAH/
-        AVYB5QGbAf8BVgHlAZsB/wFWAeUBmwH/AVYB5QGbAf8BVwHmAZwB/wFMAekBkQH/AQoBVwEfAf8YAAFJ
-        AUMBOgH/AckBvQGoAf8BzQHCAasB/wHMAcABqgH/AcwBwAGqAf8BzAHAAaoB/wHMAcABqgH/Ac0BwgGr
-        Af8ByQG9AagB/wFJAUMBOgH/GAABDwEOAWoB/wFcAWUB/gH/AWUBggH8Af8BZAGBAfsB/wFkAYEB+wH/
-        AWQBgQH7Af8BZAGBAfsB/wFlAYIB/AH/AVwBZQH+Af8BDwEOAWoB/xgAAVEBMAEFAf8B1AGdAUAB/wHR
-        AaABSAH/AdEBnwFGAf8B0QGfAUYB/wHRAZ8BRgH/AdEBnwFGAf8B0QGgAUgB/wHUAZ0BQAH/AVEBMAED
-        Af8YAAEIAU4BGQH/AT8B0QFsAf8BRQHPAYQB/wFEAc4BgwH/AUQBzgGDAf8BRAHOAYMB/wFEAc4BgwH/
-        AUUBzwGEAf8BPwHRAWwB/wEIAU4BGQH/GAABQwE9ATQB/wG1AawBlwH/AbUBrQGZAf8BtQGsAZgB/wG1
-        AawBmAH/AbUBrAGYAf8BtQGsAZgB/wG1Aa0BmQH/AbUBrAGXAf8BQwE8ATQB/xgAAgoBYQH/AUwBUgHm
-        Af8BUAFaAeIB/wFPAVgB4gH/AU8BWAHiAf8BTwFYAeIB/wFPAVgB4gH/AVABWgHiAf8BSwFSAeYB/wII
-        AWEB/xgAAUgBKQEBAf8BuwGHAS8B/wG6AYcBMgH/AbkBhwEyAf8BuQGHATIB/wG5AYcBMgH/AbkBhwEy
-        Af8BugGHATIB/wG7AYcBLwH/AUgBKQEBAf8YAAEEAUYBFwH/AS8BtwFZAf8BMgG0AVsB/wEyAbQBWwH/
-        ATIBtAFbAf8BMgG0AVsB/wEyAbQBWwH/ATIBtAFbAf8BLwG3AVkB/wEEAUYBFwH/GAABPQE2AS8B/wGh
-        AZcBhgH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaEBlwGG
-        Af8BPQE2AS8B/xgAAQQBAwFaAf8BOQE9AdEB/wE6AUABzgH/AToBQAHNAf8BOgFAAc0B/wE6AUABzQH/
-        AToBQAHNAf8BOgFAAc4B/wE5AT0B0QH/AQQBAwFaAf8YAAE/ASMBAAH/AaIBYwEjAf8BnwFgASEB/wGb
-        AV0BHgH/AZsBXQEeAf8BmwFdAR4B/wGbAV0BHgH/AZ8BYAEhAf8BogFjASMB/wE/ASMBAAH/GAABAQE9
-        ARIB/wEkAZ8BSAH/ASIBmwFGAf8BHwGZAUMB/wEfAZkBQwH/AR8BmQFDAf8BHwGZAUMB/wEiAZsBRgH/
-        ASQBnwFIAf8BAQE9ARIB/xgAATYBMAEpAf8BjQGEAWUB/wGKAYEBYgH/AYcBbAFfAf8BhwFsAV8B/wGH
-        AWwBXwH/AYcBbAFfAf8BigGBAWIB/wGNAYQBZQH/ATYBMAEpAf8aAAFSAf8BKQEtAboB/wEmASoBtgH/
-        ASIBJwG0Af8BIgEnAbQB/wEiAScBtAH/ASIBJwG0Af8BJgEqAbYB/wEpAS0BugH/AgABUgH/GAABNgEb
-        AQAB/wGfAWsBPwH/AaEBhAFIAf8BoAGCAUYB/wGfAYEBRQH/AZ8BgQFFAf8BoAGCAUYB/wGhAYQBSAH/
-        AZ8BawE/Af8BNgEdAQAB/xkAATQBCwH/AUEBnQFYAf8BSgGfAWAB/wFIAZ4BXgH/AUYBnQFdAf8BRgGd
-        AV0B/wFIAZ4BXgH/AUoBnwFgAf8BQQGdAVgB/wEAATQBCwH/GAABLwEqASQB/wGUAY4BgwH/AZcBkQGJ
-        Af8BlgGQAYcB/wGVAY8BhgH/AZUBjwGGAf8BlgGQAYcB/wGXAZEBiQH/AZQBjgGDAf8BLwEqASQB/xoA
-        AUkB/wFBAUIBtgH/AUkBSwG2Af8BSAFJAbUB/wFGAUcBtQH/AUYBRwG1Af8BSAFJAbUB/wFJAUsBtgH/
-        AUEBQgG2Af8CAAFLAf8YAAEsARQBAAH/AaUBjgFgAf8BrgGaAYQB/wGtAZoBggH/Aa0BmgGCAf8BrQGa
-        AYIB/wGtAZoBggH/Aa4BmgGEAf8BpQGOAWAB/wEsARMBAAH/GQABKgEEAf8BYAGkAYEB/wGFAa0BkAH/
-        AYMBrAGPAf8BgwGsAY8B/wGDAawBjwH/AYMBrAGPAf8BhQGtAZAB/wFhAaQBgQH/AQABKwEEAf8YAAEo
-        ASIBHQH/AaABmwGVAf8BqgGmAaIB/wGqAaYBoQH/AaoBpgGhAf8BqgGmAaEB/wGqAaYBoQH/AaoBpgGi
-        Af8BoAGbAZUB/wEoASIBHQH/GgABQQH/Al0BuAH/AoIBvwH/AoABvgH/AoABvgH/AoABvgH/AoABvgH/
-        AoIBvwH/Al0BuAH/AgABQgH/GAABIAEMAQAB/wGcAYsBYwH/AbABpQGUAf8BrwGjAZIB/wGvAaMBkgH/
-        Aa8BowGSAf8BrwGjAZIB/wGwAaUBlAH/AZwBigFjAf8BIQENAQAB/xkAAR8BAAH/AWQBmwGAAf8BlQGx
-        AZ0B/wGTAa8BmwH/AZMBrwGbAf8BkwGvAZsB/wGTAa8BmwH/AZUBsQGdAf8BYgGbAYAB/wEAASABAAH/
-        GAABHgEaARYB/wGbAZcBkwH/AbEBrwGsAf8BrwGtAaoB/wGvAa0BqgH/Aa8BrQGqAf8BrwGtAaoB/wGx
-        Aa8BrAH/AZsBlwGTAf8BHwEaARYB/xoAATgB/wJdAbAB/wKQAcEB/wKOAb8B/wKOAb8B/wKOAb8B/wKO
-        Ab8B/wKQAcEB/wJdAbAB/wIAATcB/xgAARwBDAEAAf8BGwEGAQAB/wEbAQcBAAH/ARsBBgEAAf8BGwEG
-        AQAB/wEbAQYBAAH/ARsBBgEAAf8BGwEHAQAB/wEbAQYBAAH/AR0BCQEAAf8ZAAEcAQAB/wEAARoBAAH/
-        AQABGgEAAf8BAAEaAQAB/wEAARoBAAH/AQABGgEAAf8BAAEaAQAB/wEAARoBAAH/AQABGgEAAf8BAAEd
-        AQAB/xgAARwBGAETAf8BGwEXAREB/wEbARYBEgH/ARsBFgERAf8BGwEWAREB/wEbARYBEQH/ARsBFgER
-        Af8BGwEWARIB/wEbARcBEQH/AR0BGQEVAf8aAAEyAf8CAAEzAf8CAAEzAf8CAAEzAf8CAAEzAf8CAAEz
-        Af8CAAEzAf8CAAEzAf8CAAEzAf8CAAEzAf//AP8A/wAPAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEB
-        AQABAQYAAQEWAAP/AQAC/wYAAv8GAAL/BgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEH
-        BgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAC/wYAAv8GAAL/BgAY/wHgAQcB4AEHAeABBwHgAQcB4AEH
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADu
+        EAAAAk1TRnQBSQFMAgEBBQEAAagBAAGoAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIP8A/wD/ACEAAQgBTQFgAf8BEQFYAYIB/wEUAV8BiQH/ARMBXQGIAf8BEwFd
+        AYgB/wETAV0BiAH/ARMBXQGIAf8BFAFfAYkB/wERAVgBggH/AQgBTgFhAf/YAAEMAVMBaAH/AWYB5wL/
+        AYYB7wL/AYUB7gL/AYUB7gL/AYUB7gL/AYUB7gL/AYYB7wL/AWUB6AL/AQwBUwFoAf/YAAELAVIBZwH/
+        AVkB5wH+Af8BYgHqAfwB/wFhAekB+wH/AWEB6QH7Af8BYQHpAfsB/wFhAekB+wH/AWIB6gH8Af8BWQHn
+        Af4B/wELAVIBZwH/2AABBwFLAV4B/wFJAc4B5gH/AU0B0AHiAf8BTAHPAeIB/wFMAc8B4gH/AUwBzwHi
+        Af8BTAHPAeIB/wFNAdAB4gH/AUgBzwHmAf8BBQFLAV4B/9kAAUMBVwH/ATYBuAHRAf8BNwG4Ac4B/wE3
+        AbcBzQH/ATcBtwHNAf8BNwG3Ac0B/wE3AbcBzQH/ATcBuAHOAf8BNgG4AdEB/wEAAUMBVwH/2QABPQFP
+        Af8BJgGiAboB/wEjAZ4BtgH/AR8BnQG0Af8BHwGdAbQB/wEfAZ0BtAH/AR8BnQG0Af8BIwGeAbYB/wEm
+        AaIBugH/AQABPQFPAf/ZAAE0AUYB/wE+AaIBtgH/AUYBpAG2Af8BRQGiAbUB/wFDAaIBtQH/AUMBogG1
+        Af8BRQGiAbUB/wFGAaQBtgH/AT4BogG2Af8BAAE2AUgB/9kAASwBPgH/AVoBqAG4Af8BggGyAb8B/wGA
+        AbABvgH/AYABsAG+Af8BgAGwAb4B/wGAAbABvgH/AYIBsgG/Af8BWgGoAbgB/wEAAS0BPwH/2QABJQE1
+        Af8BWgGiAbAB/wGQAbYBwQH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AY4BtAG/Af8BkAG2AcEB/wFa
+        AaIBsAH/AQABJAE0Af/ZAAEgAS8B/wEAASEBMAH/AQABIQEwAf8BAAEhATAB/wEAASEBMAH/AQABIQEw
+        Af8BAAEhATAB/wEAASEBMAH/AQABIQEwAf8BAAEhATAB//8A/wD/AP8A/wD/AN4AAVABMQECAf8BXwE5
+        AQcB/wFlAT4BCQH/AWUBPQEJAf8BZQE9AQkB/wFlAT0BCQH/AWUBPQEJAf8BZQE+AQkB/wFfATkBBwH/
+        AVEBMQECAf8YAAEGAU4BGgH/AQsBXQEhAf8BDQFiASMB/wEMAWIBIwH/AQwBYgEjAf8BDAFiASMB/wEM
+        AWIBIwH/AQ0BYgEjAf8BCwFdASEB/wEGAU8BGgH/GAABQgE8ATMB/wFLAUQBOwH/AVEBSgFAAf8BUQFK
+        AUAB/wFRAUoBQAH/AVEBSgFAAf8BUQFKAUAB/wFRAUoBQAH/AUsBRAE7Af8BQgE8ATMB/xgAAggBYAH/
+        ARIBEQGCAf8CFAGJAf8BFAETAYgB/wEUARMBiAH/ARQBEwGIAf8BFAETAYgB/wIUAYkB/wESAREBggH/
+        AggBYQH/GAABWAE1AQUC/wHCAU4C/wHKAV8B/wH+AckBXgH/Af4ByQFeAf8B/gHJAV4B/wH+AckBXgL/
+        AcoBXwL/AcEBTgH/AVkBNQEFAf8YAAEJAVYBHQH/AVEB/wGaAf8BXgH/AasB/wFcAf8BqgH/AVwB/wGq
+        Af8BXAH/AaoB/wFcAf8BqgH/AV4B/wGrAf8BUQH/AZoB/wEJAVYBHwH/GAABRwFBATgB/wHbAc8BtgH/
+        AeEB1gG7Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHhAdYBuwH/AdsBzgG2Af8BRwFA
+        ATcB/xgAAQ0BDAFoAf8BZgGAAv8BhgGRAv8BhQGPAv8BhQGPAv8BhQGPAv8BhQGPAv8BhgGRAv8BZQGA
+        Av8BDQEMAWgB/xgAAVcBNAEFAf8B7wGxAUkB/wHtAbgBVwH/AewBtwFWAf8B7AG3AVYB/wHsAbcBVgH/
+        AewBtwFWAf8B7QG4AVcB/wHvAbEBSQH/AVcBMwEFAf8YAAEHAVQBHAH/AUkB6QGRAf8BVAHmAZwB/wFT
+        AeUBmwH/AVMB5QGbAf8BUwHlAZsB/wFTAeUBmwH/AVQB5gGcAf8BSQHpAZEB/wEHAVQBHAH/GAABRgFA
+        ATcB/wHJAb0BqAH/Ac0BwgGrAf8BzAHAAaoB/wHMAcABqgH/AcwBwAGqAf8BzAHAAaoB/wHNAcIBqwH/
+        AckBvQGoAf8BRgFAATcB/xgAAQwBCwFnAf8BWQFiAf4B/wFiAYIB/AH/AWEBgQH7Af8BYQGBAfsB/wFh
+        AYEB+wH/AWEBgQH7Af8BYgGCAfwB/wFZAWIB/gH/AQwBCwFnAf8YAAFOAS0BAgH/AdQBnQE9Af8B0QGg
+        AUUB/wHRAZ8BQwH/AdEBnwFDAf8B0QGfAUMB/wHRAZ8BQwH/AdEBoAFFAf8B1AGdAT0B/wFOAS0BAAH/
+        GAABBQFLARYB/wE8AdEBaQH/AUIBzwGEAf8BQQHOAYMB/wFBAc4BgwH/AUEBzgGDAf8BQQHOAYMB/wFC
+        Ac8BhAH/ATwB0QFpAf8BBQFLARYB/xgAAUABOgExAf8BtQGsAZcB/wG1Aa0BmQH/AbUBrAGYAf8BtQGs
+        AZgB/wG1AawBmAH/AbUBrAGYAf8BtQGtAZkB/wG1AawBlwH/AUABOQExAf8YAAIHAV4B/wFJAU8B5gH/
+        AU0BVwHiAf8BTAFVAeIB/wFMAVUB4gH/AUwBVQHiAf8BTAFVAeIB/wFNAVcB4gH/AUgBTwHmAf8CBQFe
+        Af8YAAFFASYBAAH/AbsBhwEsAf8BugGHAS8B/wG5AYcBLwH/AbkBhwEvAf8BuQGHAS8B/wG5AYcBLwH/
+        AboBhwEvAf8BuwGHASwB/wFFASYBAAH/GAABAQFDARQB/wEsAbcBVgH/AS8BtAFYAf8BLwG0AVgB/wEv
+        AbQBWAH/AS8BtAFYAf8BLwG0AVgB/wEvAbQBWAH/ASwBtwFWAf8BAQFDARQB/xgAAToBMwEsAf8BoQGX
+        AYYB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGhAZcBhgH/
+        AToBMwEsAf8YAAEBAQABVwH/ATYBOgHRAf8BNwE9Ac4B/wE3AT0BzQH/ATcBPQHNAf8BNwE9Ac0B/wE3
+        AT0BzQH/ATcBPQHOAf8BNgE6AdEB/wEBAQABVwH/GAABPAEgAQAB/wGiAWABIAH/AZ8BXQEeAf8BmwFa
+        ARsB/wGbAVoBGwH/AZsBWgEbAf8BmwFaARsB/wGfAV0BHgH/AaIBYAEgAf8BPAEgAQAB/xkAAToBDwH/
+        ASEBnwFFAf8BHwGbAUMB/wEcAZkBQAH/ARwBmQFAAf8BHAGZAUAB/wEcAZkBQAH/AR8BmwFDAf8BIQGf
+        AUUB/wEAAToBDwH/GAABMwEtASYB/wGNAYQBYgH/AYoBgQFfAf8BhwFpAVwB/wGHAWkBXAH/AYcBaQFc
+        Af8BhwFpAVwB/wGKAYEBXwH/AY0BhAFiAf8BMwEtASYB/xoAAU8B/wEmASoBugH/ASMBJwG2Af8BHwEk
+        AbQB/wEfASQBtAH/AR8BJAG0Af8BHwEkAbQB/wEjAScBtgH/ASYBKgG6Af8CAAFPAf8YAAEzARgBAAH/
+        AZ8BaAE8Af8BoQGEAUUB/wGgAYIBQwH/AZ8BgQFCAf8BnwGBAUIB/wGgAYIBQwH/AaEBhAFFAf8BnwFo
+        ATwB/wEzARoBAAH/GQABMQEIAf8BPgGdAVUB/wFHAZ8BXQH/AUUBngFbAf8BQwGdAVoB/wFDAZ0BWgH/
+        AUUBngFbAf8BRwGfAV0B/wE+AZ0BVQH/AQABMQEIAf8YAAEsAScBIQH/AZQBjgGDAf8BlwGRAYkB/wGW
+        AZABhwH/AZUBjwGGAf8BlQGPAYYB/wGWAZABhwH/AZcBkQGJAf8BlAGOAYMB/wEsAScBIQH/GgABRgH/
+        AT4BPwG2Af8BRgFIAbYB/wFFAUYBtQH/AUMBRAG1Af8BQwFEAbUB/wFFAUYBtQH/AUYBSAG2Af8BPgE/
+        AbYB/wIAAUgB/xgAASkBEQEAAf8BpQGOAV0B/wGuAZoBhAH/Aa0BmgGCAf8BrQGaAYIB/wGtAZoBggH/
+        Aa0BmgGCAf8BrgGaAYQB/wGlAY4BXQH/ASkBEAEAAf8ZAAEnAQEB/wFdAaQBgQH/AYUBrQGQAf8BgwGs
+        AY8B/wGDAawBjwH/AYMBrAGPAf8BgwGsAY8B/wGFAa0BkAH/AV4BpAGBAf8BAAEoAQEB/xgAASUBHwEa
+        Af8BoAGbAZUB/wGqAaYBogH/AaoBpgGhAf8BqgGmAaEB/wGqAaYBoQH/AaoBpgGhAf8BqgGmAaIB/wGg
+        AZsBlQH/ASUBHwEaAf8aAAE+Af8CWgG4Af8CggG/Af8CgAG+Af8CgAG+Af8CgAG+Af8CgAG+Af8CggG/
+        Af8CWgG4Af8CAAE/Af8YAAEdAQkBAAH/AZwBiwFgAf8BsAGlAZQB/wGvAaMBkgH/Aa8BowGSAf8BrwGj
+        AZIB/wGvAaMBkgH/AbABpQGUAf8BnAGKAWAB/wEeAQoBAAH/GQABHAEAAf8BYQGbAYAB/wGVAbEBnQH/
+        AZMBrwGbAf8BkwGvAZsB/wGTAa8BmwH/AZMBrwGbAf8BlQGxAZ0B/wFfAZsBgAH/AQABHQEAAf8YAAEb
+        ARcBEwH/AZsBlwGTAf8BsQGvAawB/wGvAa0BqgH/Aa8BrQGqAf8BrwGtAaoB/wGvAa0BqgH/AbEBrwGs
+        Af8BmwGXAZMB/wEcARcBEwH/GgABNQH/AloBsAH/ApABwQH/Ao4BvwH/Ao4BvwH/Ao4BvwH/Ao4BvwH/
+        ApABwQH/AloBsAH/AgABNAH/GAABGQEJAQAB/wEYAQMBAAH/ARgBBAEAAf8BGAEDAQAB/wEYAQMBAAH/
+        ARgBAwEAAf8BGAEDAQAB/wEYAQQBAAH/ARgBAwEAAf8BGgEGAQAB/xkAARkBAAH/AQABFwEAAf8BAAEX
+        AQAB/wEAARcBAAH/AQABFwEAAf8BAAEXAQAB/wEAARcBAAH/AQABFwEAAf8BAAEXAQAB/wEAARoBAAH/
+        GAABGQEVARAB/wEYARQBDgH/ARgBEwEPAf8BGAETAQ4B/wEYARMBDgH/ARgBEwEOAf8BGAETAQ4B/wEY
+        ARMBDwH/ARgBFAEOAf8BGgEWARIB/xoAAS8B/wIAATAB/wIAATAB/wIAATAB/wIAATAB/wIAATAB/wIA
+        ATAB/wIAATAB/wIAATAB/wIAATAB//8A/wD/AA8AAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEB
+        BgABARYAA/8BAAL/BgAC/wYAAv8GAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHg
+        AQcGAAHgAQcGAAHgAQcGAAHgAQcGAAL/BgAC/wYAAv8GABj/AeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
         AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
         AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
-        AeABBwHgAQcB4AEHAeABBwHgAQcY/ws=
+        AeABBwHgAQcB4AEHAeABBxj/Cw==
 </value>
   </data>
   <metadata name="MainStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -2762,6 +2762,9 @@
         /+AAAP/gAAAPgAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAAAAgAAAAMABAADgAwAA4A8AAP//AAA=
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>33</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAA8AAAAQAAEABADoTgAA9gAAADAwEAABAAQAaAYAAN5PAAAgIBAAAQAEAOgCAABGVgAAGBgQAAEA
