--- a/x360ce.App/MainForm.resx
+++ b/x360ce.App/MainForm.resx
@@ -124,80 +124,80 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADu
-        EAAAAk1TRnQBSQFMAgEBBQEAAagBAAGoAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/ACEAAQgBTQFgAf8BEQFYAYIB/wEUAV8BiQH/ARMBXQGIAf8BEwFd
-        AYgB/wETAV0BiAH/ARMBXQGIAf8BFAFfAYkB/wERAVgBggH/AQgBTgFhAf/YAAEMAVMBaAH/AWYB5wL/
-        AYYB7wL/AYUB7gL/AYUB7gL/AYUB7gL/AYUB7gL/AYYB7wL/AWUB6AL/AQwBUwFoAf/YAAELAVIBZwH/
-        AVkB5wH+Af8BYgHqAfwB/wFhAekB+wH/AWEB6QH7Af8BYQHpAfsB/wFhAekB+wH/AWIB6gH8Af8BWQHn
-        Af4B/wELAVIBZwH/2AABBwFLAV4B/wFJAc4B5gH/AU0B0AHiAf8BTAHPAeIB/wFMAc8B4gH/AUwBzwHi
-        Af8BTAHPAeIB/wFNAdAB4gH/AUgBzwHmAf8BBQFLAV4B/9kAAUMBVwH/ATYBuAHRAf8BNwG4Ac4B/wE3
-        AbcBzQH/ATcBtwHNAf8BNwG3Ac0B/wE3AbcBzQH/ATcBuAHOAf8BNgG4AdEB/wEAAUMBVwH/2QABPQFP
-        Af8BJgGiAboB/wEjAZ4BtgH/AR8BnQG0Af8BHwGdAbQB/wEfAZ0BtAH/AR8BnQG0Af8BIwGeAbYB/wEm
-        AaIBugH/AQABPQFPAf/ZAAE0AUYB/wE+AaIBtgH/AUYBpAG2Af8BRQGiAbUB/wFDAaIBtQH/AUMBogG1
-        Af8BRQGiAbUB/wFGAaQBtgH/AT4BogG2Af8BAAE2AUgB/9kAASwBPgH/AVoBqAG4Af8BggGyAb8B/wGA
-        AbABvgH/AYABsAG+Af8BgAGwAb4B/wGAAbABvgH/AYIBsgG/Af8BWgGoAbgB/wEAAS0BPwH/2QABJQE1
-        Af8BWgGiAbAB/wGQAbYBwQH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AY4BtAG/Af8BkAG2AcEB/wFa
-        AaIBsAH/AQABJAE0Af/ZAAEgAS8B/wEAASEBMAH/AQABIQEwAf8BAAEhATAB/wEAASEBMAH/AQABIQEw
-        Af8BAAEhATAB/wEAASEBMAH/AQABIQEwAf8BAAEhATAB//8A/wD/AP8A/wD/AN4AAVABMQECAf8BXwE5
-        AQcB/wFlAT4BCQH/AWUBPQEJAf8BZQE9AQkB/wFlAT0BCQH/AWUBPQEJAf8BZQE+AQkB/wFfATkBBwH/
-        AVEBMQECAf8YAAEGAU4BGgH/AQsBXQEhAf8BDQFiASMB/wEMAWIBIwH/AQwBYgEjAf8BDAFiASMB/wEM
-        AWIBIwH/AQ0BYgEjAf8BCwFdASEB/wEGAU8BGgH/GAABQgE8ATMB/wFLAUQBOwH/AVEBSgFAAf8BUQFK
-        AUAB/wFRAUoBQAH/AVEBSgFAAf8BUQFKAUAB/wFRAUoBQAH/AUsBRAE7Af8BQgE8ATMB/xgAAggBYAH/
-        ARIBEQGCAf8CFAGJAf8BFAETAYgB/wEUARMBiAH/ARQBEwGIAf8BFAETAYgB/wIUAYkB/wESAREBggH/
-        AggBYQH/GAABWAE1AQUC/wHCAU4C/wHKAV8B/wH+AckBXgH/Af4ByQFeAf8B/gHJAV4B/wH+AckBXgL/
-        AcoBXwL/AcEBTgH/AVkBNQEFAf8YAAEJAVYBHQH/AVEB/wGaAf8BXgH/AasB/wFcAf8BqgH/AVwB/wGq
-        Af8BXAH/AaoB/wFcAf8BqgH/AV4B/wGrAf8BUQH/AZoB/wEJAVYBHwH/GAABRwFBATgB/wHbAc8BtgH/
-        AeEB1gG7Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHhAdYBuwH/AdsBzgG2Af8BRwFA
-        ATcB/xgAAQ0BDAFoAf8BZgGAAv8BhgGRAv8BhQGPAv8BhQGPAv8BhQGPAv8BhQGPAv8BhgGRAv8BZQGA
-        Av8BDQEMAWgB/xgAAVcBNAEFAf8B7wGxAUkB/wHtAbgBVwH/AewBtwFWAf8B7AG3AVYB/wHsAbcBVgH/
-        AewBtwFWAf8B7QG4AVcB/wHvAbEBSQH/AVcBMwEFAf8YAAEHAVQBHAH/AUkB6QGRAf8BVAHmAZwB/wFT
-        AeUBmwH/AVMB5QGbAf8BUwHlAZsB/wFTAeUBmwH/AVQB5gGcAf8BSQHpAZEB/wEHAVQBHAH/GAABRgFA
-        ATcB/wHJAb0BqAH/Ac0BwgGrAf8BzAHAAaoB/wHMAcABqgH/AcwBwAGqAf8BzAHAAaoB/wHNAcIBqwH/
-        AckBvQGoAf8BRgFAATcB/xgAAQwBCwFnAf8BWQFiAf4B/wFiAYIB/AH/AWEBgQH7Af8BYQGBAfsB/wFh
-        AYEB+wH/AWEBgQH7Af8BYgGCAfwB/wFZAWIB/gH/AQwBCwFnAf8YAAFOAS0BAgH/AdQBnQE9Af8B0QGg
-        AUUB/wHRAZ8BQwH/AdEBnwFDAf8B0QGfAUMB/wHRAZ8BQwH/AdEBoAFFAf8B1AGdAT0B/wFOAS0BAAH/
-        GAABBQFLARYB/wE8AdEBaQH/AUIBzwGEAf8BQQHOAYMB/wFBAc4BgwH/AUEBzgGDAf8BQQHOAYMB/wFC
-        Ac8BhAH/ATwB0QFpAf8BBQFLARYB/xgAAUABOgExAf8BtQGsAZcB/wG1Aa0BmQH/AbUBrAGYAf8BtQGs
-        AZgB/wG1AawBmAH/AbUBrAGYAf8BtQGtAZkB/wG1AawBlwH/AUABOQExAf8YAAIHAV4B/wFJAU8B5gH/
-        AU0BVwHiAf8BTAFVAeIB/wFMAVUB4gH/AUwBVQHiAf8BTAFVAeIB/wFNAVcB4gH/AUgBTwHmAf8CBQFe
-        Af8YAAFFASYBAAH/AbsBhwEsAf8BugGHAS8B/wG5AYcBLwH/AbkBhwEvAf8BuQGHAS8B/wG5AYcBLwH/
-        AboBhwEvAf8BuwGHASwB/wFFASYBAAH/GAABAQFDARQB/wEsAbcBVgH/AS8BtAFYAf8BLwG0AVgB/wEv
-        AbQBWAH/AS8BtAFYAf8BLwG0AVgB/wEvAbQBWAH/ASwBtwFWAf8BAQFDARQB/xgAAToBMwEsAf8BoQGX
-        AYYB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGhAZcBhgH/
-        AToBMwEsAf8YAAEBAQABVwH/ATYBOgHRAf8BNwE9Ac4B/wE3AT0BzQH/ATcBPQHNAf8BNwE9Ac0B/wE3
-        AT0BzQH/ATcBPQHOAf8BNgE6AdEB/wEBAQABVwH/GAABPAEgAQAB/wGiAWABIAH/AZ8BXQEeAf8BmwFa
-        ARsB/wGbAVoBGwH/AZsBWgEbAf8BmwFaARsB/wGfAV0BHgH/AaIBYAEgAf8BPAEgAQAB/xkAAToBDwH/
-        ASEBnwFFAf8BHwGbAUMB/wEcAZkBQAH/ARwBmQFAAf8BHAGZAUAB/wEcAZkBQAH/AR8BmwFDAf8BIQGf
-        AUUB/wEAAToBDwH/GAABMwEtASYB/wGNAYQBYgH/AYoBgQFfAf8BhwFpAVwB/wGHAWkBXAH/AYcBaQFc
-        Af8BhwFpAVwB/wGKAYEBXwH/AY0BhAFiAf8BMwEtASYB/xoAAU8B/wEmASoBugH/ASMBJwG2Af8BHwEk
-        AbQB/wEfASQBtAH/AR8BJAG0Af8BHwEkAbQB/wEjAScBtgH/ASYBKgG6Af8CAAFPAf8YAAEzARgBAAH/
-        AZ8BaAE8Af8BoQGEAUUB/wGgAYIBQwH/AZ8BgQFCAf8BnwGBAUIB/wGgAYIBQwH/AaEBhAFFAf8BnwFo
-        ATwB/wEzARoBAAH/GQABMQEIAf8BPgGdAVUB/wFHAZ8BXQH/AUUBngFbAf8BQwGdAVoB/wFDAZ0BWgH/
-        AUUBngFbAf8BRwGfAV0B/wE+AZ0BVQH/AQABMQEIAf8YAAEsAScBIQH/AZQBjgGDAf8BlwGRAYkB/wGW
-        AZABhwH/AZUBjwGGAf8BlQGPAYYB/wGWAZABhwH/AZcBkQGJAf8BlAGOAYMB/wEsAScBIQH/GgABRgH/
-        AT4BPwG2Af8BRgFIAbYB/wFFAUYBtQH/AUMBRAG1Af8BQwFEAbUB/wFFAUYBtQH/AUYBSAG2Af8BPgE/
-        AbYB/wIAAUgB/xgAASkBEQEAAf8BpQGOAV0B/wGuAZoBhAH/Aa0BmgGCAf8BrQGaAYIB/wGtAZoBggH/
-        Aa0BmgGCAf8BrgGaAYQB/wGlAY4BXQH/ASkBEAEAAf8ZAAEnAQEB/wFdAaQBgQH/AYUBrQGQAf8BgwGs
-        AY8B/wGDAawBjwH/AYMBrAGPAf8BgwGsAY8B/wGFAa0BkAH/AV4BpAGBAf8BAAEoAQEB/xgAASUBHwEa
-        Af8BoAGbAZUB/wGqAaYBogH/AaoBpgGhAf8BqgGmAaEB/wGqAaYBoQH/AaoBpgGhAf8BqgGmAaIB/wGg
-        AZsBlQH/ASUBHwEaAf8aAAE+Af8CWgG4Af8CggG/Af8CgAG+Af8CgAG+Af8CgAG+Af8CgAG+Af8CggG/
-        Af8CWgG4Af8CAAE/Af8YAAEdAQkBAAH/AZwBiwFgAf8BsAGlAZQB/wGvAaMBkgH/Aa8BowGSAf8BrwGj
-        AZIB/wGvAaMBkgH/AbABpQGUAf8BnAGKAWAB/wEeAQoBAAH/GQABHAEAAf8BYQGbAYAB/wGVAbEBnQH/
-        AZMBrwGbAf8BkwGvAZsB/wGTAa8BmwH/AZMBrwGbAf8BlQGxAZ0B/wFfAZsBgAH/AQABHQEAAf8YAAEb
-        ARcBEwH/AZsBlwGTAf8BsQGvAawB/wGvAa0BqgH/Aa8BrQGqAf8BrwGtAaoB/wGvAa0BqgH/AbEBrwGs
-        Af8BmwGXAZMB/wEcARcBEwH/GgABNQH/AloBsAH/ApABwQH/Ao4BvwH/Ao4BvwH/Ao4BvwH/Ao4BvwH/
-        ApABwQH/AloBsAH/AgABNAH/GAABGQEJAQAB/wEYAQMBAAH/ARgBBAEAAf8BGAEDAQAB/wEYAQMBAAH/
-        ARgBAwEAAf8BGAEDAQAB/wEYAQQBAAH/ARgBAwEAAf8BGgEGAQAB/xkAARkBAAH/AQABFwEAAf8BAAEX
-        AQAB/wEAARcBAAH/AQABFwEAAf8BAAEXAQAB/wEAARcBAAH/AQABFwEAAf8BAAEXAQAB/wEAARoBAAH/
-        GAABGQEVARAB/wEYARQBDgH/ARgBEwEPAf8BGAETAQ4B/wEYARMBDgH/ARgBEwEOAf8BGAETAQ4B/wEY
-        ARMBDwH/ARgBFAEOAf8BGgEWARIB/xoAAS8B/wIAATAB/wIAATAB/wIAATAB/wIAATAB/wIAATAB/wIA
-        ATAB/wIAATAB/wIAATAB/wIAATAB//8A/wD/AA8AAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEB
-        BgABARYAA/8BAAL/BgAC/wYAAv8GAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHg
-        AQcGAAHgAQcGAAHgAQcGAAHgAQcGAAL/BgAC/wYAAv8GABj/AeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADm
+        EAAAAk1TRnQBSQFMAgEBBQEAAbABAAGwAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIP8A/wD/ACEAAQcBTAFfAf8BEAFXAYIB/wETAV4BiQH/ARIBXAGIAf8BEgFc
+        AYgB/wESAVwBiAH/ARIBXAGIAf8BEwFeAYkB/wEQAVcBggH/AQcBTQFgAf/YAAELAVIBZwH/AWUB5wL/
+        AYYB7wL/AYUB7gL/AYUB7gL/AYUB7gL/AYUB7gL/AYYB7wL/AWQB6AL/AQsBUgFnAf/YAAEKAVEBZgH/
+        AVgB5wH+Af8BYQHqAfwB/wFgAekB+wH/AWAB6QH7Af8BYAHpAfsB/wFgAekB+wH/AWEB6gH8Af8BWAHn
+        Af4B/wEKAVEBZgH/2AABBgFKAV0B/wFIAc4B5gH/AUwB0AHiAf8BSwHPAeIB/wFLAc8B4gH/AUsBzwHi
+        Af8BSwHPAeIB/wFMAdAB4gH/AUcBzwHmAf8BBAFKAV0B/9kAAUIBVgH/ATUBuAHRAf8BNgG4Ac4B/wE2
+        AbcBzQH/ATYBtwHNAf8BNgG3Ac0B/wE2AbcBzQH/ATYBuAHOAf8BNQG4AdEB/wEAAUIBVgH/2QABPAFO
+        Af8BJQGiAboB/wEiAZ4BtgH/AR4BnQG0Af8BHgGdAbQB/wEeAZ0BtAH/AR4BnQG0Af8BIgGeAbYB/wEl
+        AaIBugH/AQABPAFOAf/ZAAEzAUUB/wE9AaIBtgH/AUUBpAG2Af8BRAGiAbUB/wFCAaIBtQH/AUIBogG1
+        Af8BRAGiAbUB/wFFAaQBtgH/AT0BogG2Af8BAAE1AUcB/9kAASsBPQH/AVkBqAG4Af8BggGyAb8B/wGA
+        AbABvgH/AYABsAG+Af8BgAGwAb4B/wGAAbABvgH/AYIBsgG/Af8BWQGoAbgB/wEAASwBPgH/2QABJAE0
+        Af8BWQGiAbAB/wGQAbYBwQH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AY4BtAG/Af8BkAG2AcEB/wFZ
+        AaIBsAH/AQABIwEzAf/ZAAEfAS4B/wEAASABLwH/AQABIAEvAf8BAAEgAS8B/wEAASABLwH/AQABIAEv
+        Af8BAAEgAS8B/wEAASABLwH/AQABIAEvAf8BAAEgAS8B//8A/wD/AP8A/wD/AN4AAU8BMAEBAf8BXgE4
+        AQYB/wFkAT0BCAH/AWQBPAEIAf8BZAE8AQgB/wFkATwBCAH/AWQBPAEIAf8BZAE9AQgB/wFeATgBBgH/
+        AVABMAEBAf8YAAEFAU0BGQH/AQoBXAEgAf8BDAFhASIB/wELAWEBIgH/AQsBYQEiAf8BCwFhASIB/wEL
+        AWEBIgH/AQwBYQEiAf8BCgFcASAB/wEFAU4BGQH/GAABQQE7ATIB/wFKAUMBOgH/AVABSQE/Af8BUAFJ
+        AT8B/wFQAUkBPwH/AVABSQE/Af8BUAFJAT8B/wFQAUkBPwH/AUoBQwE6Af8BQQE7ATIB/xgAAgcBXwH/
+        AREBEAGCAf8CEwGJAf8BEwESAYgB/wETARIBiAH/ARMBEgGIAf8BEwESAYgB/wITAYkB/wERARABggH/
+        AgcBYAH/GAABVwE0AQQC/wHCAU0C/wHKAV4B/wH+AckBXQH/Af4ByQFdAf8B/gHJAV0B/wH+AckBXQL/
+        AcoBXgL/AcEBTQH/AVgBNAEEAf8YAAEIAVUBHAH/AVAB/wGaAf8BXQH/AasB/wFbAf8BqgH/AVsB/wGq
+        Af8BWwH/AaoB/wFbAf8BqgH/AV0B/wGrAf8BUAH/AZoB/wEIAVUBHgH/GAABRgFAATcB/wHbAc8BtgH/
+        AeEB1gG7Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHhAdYBuwH/AdsBzgG2Af8BRgE/
+        ATYB/xgAAQwBCwFnAf8BZQGAAv8BhgGRAv8BhQGPAv8BhQGPAv8BhQGPAv8BhQGPAv8BhgGRAv8BZAGA
+        Av8BDAELAWcB/xgAAVYBMwEEAf8B7wGxAUgB/wHtAbgBVgH/AewBtwFVAf8B7AG3AVUB/wHsAbcBVQH/
+        AewBtwFVAf8B7QG4AVYB/wHvAbEBSAH/AVYBMgEEAf8YAAEGAVMBGwH/AUgB6QGRAf8BUwHmAZwB/wFS
+        AeUBmwH/AVIB5QGbAf8BUgHlAZsB/wFSAeUBmwH/AVMB5gGcAf8BSAHpAZEB/wEGAVMBGwH/GAABRQE/
+        ATYB/wHJAb0BqAH/Ac0BwgGrAf8BzAHAAaoB/wHMAcABqgH/AcwBwAGqAf8BzAHAAaoB/wHNAcIBqwH/
+        AckBvQGoAf8BRQE/ATYB/xgAAQsBCgFmAf8BWAFhAf4B/wFhAYIB/AH/AWABgQH7Af8BYAGBAfsB/wFg
+        AYEB+wH/AWABgQH7Af8BYQGCAfwB/wFYAWEB/gH/AQsBCgFmAf8YAAFNASwBAQH/AdQBnQE8Af8B0QGg
+        AUQB/wHRAZ8BQgH/AdEBnwFCAf8B0QGfAUIB/wHRAZ8BQgH/AdEBoAFEAf8B1AGdATwB/wFNASwBAAH/
+        GAABBAFKARUB/wE7AdEBaAH/AUEBzwGEAf8BQAHOAYMB/wFAAc4BgwH/AUABzgGDAf8BQAHOAYMB/wFB
+        Ac8BhAH/ATsB0QFoAf8BBAFKARUB/xgAAT8BOQEwAf8BtQGsAZcB/wG1Aa0BmQH/AbUBrAGYAf8BtQGs
+        AZgB/wG1AawBmAH/AbUBrAGYAf8BtQGtAZkB/wG1AawBlwH/AT8BOAEwAf8YAAIGAV0B/wFIAU4B5gH/
+        AUwBVgHiAf8BSwFUAeIB/wFLAVQB4gH/AUsBVAHiAf8BSwFUAeIB/wFMAVYB4gH/AUcBTgHmAf8CBAFd
+        Af8YAAFEASUBAAH/AbsBhwErAf8BugGHAS4B/wG5AYcBLgH/AbkBhwEuAf8BuQGHAS4B/wG5AYcBLgH/
+        AboBhwEuAf8BuwGHASsB/wFEASUBAAH/GQABQgETAf8BKwG3AVUB/wEuAbQBVwH/AS4BtAFXAf8BLgG0
+        AVcB/wEuAbQBVwH/AS4BtAFXAf8BLgG0AVcB/wErAbcBVQH/AQABQgETAf8YAAE5ATIBKwH/AaEBlwGG
+        Af8BoAGWAYUB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGFAf8BoQGXAYYB/wE5
+        ATIBKwH/GgABVgH/ATUBOQHRAf8BNgE8Ac4B/wE2ATwBzQH/ATYBPAHNAf8BNgE8Ac0B/wE2ATwBzQH/
+        ATYBPAHOAf8BNQE5AdEB/wIAAVYB/xgAATsBHwEAAf8BogFfAR8B/wGfAVwBHQH/AZsBWQEaAf8BmwFZ
+        ARoB/wGbAVkBGgH/AZsBWQEaAf8BnwFcAR0B/wGiAV8BHwH/ATsBHwEAAf8ZAAE5AQ4B/wEgAZ8BRAH/
+        AR4BmwFCAf8BGwGZAT8B/wEbAZkBPwH/ARsBmQE/Af8BGwGZAT8B/wEeAZsBQgH/ASABnwFEAf8BAAE5
+        AQ4B/xgAATIBLAElAf8BjQGEAWEB/wGKAYEBXgH/AYcBaAFbAf8BhwFoAVsB/wGHAWgBWwH/AYcBaAFb
+        Af8BigGBAV4B/wGNAYQBYQH/ATIBLAElAf8aAAFOAf8BJQEpAboB/wEiASYBtgH/AR4BIwG0Af8BHgEj
+        AbQB/wEeASMBtAH/AR4BIwG0Af8BIgEmAbYB/wElASkBugH/AgABTgH/GAABMgEXAQAB/wGfAWcBOwH/
+        AaEBhAFEAf8BoAGCAUIB/wGfAYEBQQH/AZ8BgQFBAf8BoAGCAUIB/wGhAYQBRAH/AZ8BZwE7Af8BMgEZ
+        AQAB/xkAATABBwH/AT0BnQFUAf8BRgGfAVwB/wFEAZ4BWgH/AUIBnQFZAf8BQgGdAVkB/wFEAZ4BWgH/
+        AUYBnwFcAf8BPQGdAVQB/wEAATABBwH/GAABKwEmASAB/wGUAY4BgwH/AZcBkQGJAf8BlgGQAYcB/wGV
+        AY8BhgH/AZUBjwGGAf8BlgGQAYcB/wGXAZEBiQH/AZQBjgGDAf8BKwEmASAB/xoAAUUB/wE9AT4BtgH/
+        AUUBRwG2Af8BRAFFAbUB/wFCAUMBtQH/AUIBQwG1Af8BRAFFAbUB/wFFAUcBtgH/AT0BPgG2Af8CAAFH
+        Af8YAAEoARABAAH/AaUBjgFcAf8BrgGaAYQB/wGtAZoBggH/Aa0BmgGCAf8BrQGaAYIB/wGtAZoBggH/
+        Aa4BmgGEAf8BpQGOAVwB/wEoAQ8BAAH/GQABJgEAAf8BXAGkAYEB/wGFAa0BkAH/AYMBrAGPAf8BgwGs
+        AY8B/wGDAawBjwH/AYMBrAGPAf8BhQGtAZAB/wFdAaQBgQH/AQABJwEAAf8YAAEkAR4BGQH/AaABmwGV
+        Af8BqgGmAaIB/wGqAaYBoQH/AaoBpgGhAf8BqgGmAaEB/wGqAaYBoQH/AaoBpgGiAf8BoAGbAZUB/wEk
+        AR4BGQH/GgABPQH/AlkBuAH/AoIBvwH/AoABvgH/AoABvgH/AoABvgH/AoABvgH/AoIBvwH/AlkBuAH/
+        AgABPgH/GAABHAEIAQAB/wGcAYsBXwH/AbABpQGUAf8BrwGjAZIB/wGvAaMBkgH/Aa8BowGSAf8BrwGj
+        AZIB/wGwAaUBlAH/AZwBigFfAf8BHQEJAQAB/xkAARsBAAH/AWABmwGAAf8BlQGxAZ0B/wGTAa8BmwH/
+        AZMBrwGbAf8BkwGvAZsB/wGTAa8BmwH/AZUBsQGdAf8BXgGbAYAB/wEAARwBAAH/GAABGgEWARIB/wGb
+        AZcBkwH/AbEBrwGsAf8BrwGtAaoB/wGvAa0BqgH/Aa8BrQGqAf8BrwGtAaoB/wGxAa8BrAH/AZsBlwGT
+        Af8BGwEWARIB/xoAATQB/wJZAbAB/wKQAcEB/wKOAb8B/wKOAb8B/wKOAb8B/wKOAb8B/wKQAcEB/wJZ
+        AbAB/wIAATMB/xgAARgBCAEAAf8BFwECAQAB/wEXAQMBAAH/ARcBAgEAAf8BFwECAQAB/wEXAQIBAAH/
+        ARcBAgEAAf8BFwEDAQAB/wEXAQIBAAH/ARkBBQEAAf8ZAAEYAQAB/wEAARYBAAH/AQABFgEAAf8BAAEW
+        AQAB/wEAARYBAAH/AQABFgEAAf8BAAEWAQAB/wEAARYBAAH/AQABFgEAAf8BAAEZAQAB/xgAARgBFAEP
+        Af8BFwETAQ0B/wEXARIBDgH/ARcBEgENAf8BFwESAQ0B/wEXARIBDQH/ARcBEgENAf8BFwESAQ4B/wEX
+        ARMBDQH/ARkBFQERAf8aAAEuAf8CAAEvAf8CAAEvAf8CAAEvAf8CAAEvAf8CAAEvAf8CAAEvAf8CAAEv
+        Af8CAAEvAf8CAAEvAf//AP8A/wAPAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/
+        AQAC/wYAAv8GAAL/BgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEH
+        BgAB4AEHBgAB4AEHBgAC/wYAAv8GAAL/BgAY/wHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
         AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
         AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
-        AeABBwHgAQcB4AEHAeABBxj/Cw==
+        AeABBwHgAQcY/ws=
 </value>
   </data>
   <metadata name="MainStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
