--- a/x360ce.App.Beta/MainForm.resx
+++ b/x360ce.App.Beta/MainForm.resx
@@ -124,79 +124,79 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC+
-        EAAAAk1TRnQBSQFMAgEBBQEAAfgBAAH4AQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/ACIAAUMBVgH/AQcBTgGCAf8BCgFVAYkB/wEJAVMBiAH/AQkBUwGI
-        Af8BCQFTAYgB/wEJAVMBiAH/AQoBVQGJAf8BBwFOAYIB/wEAAUQBVwH/2AABAgFJAV4B/wFcAecC/wGG
-        Ae8C/wGFAe4C/wGFAe4C/wGFAe4C/wGFAe4C/wGGAe8C/wFbAegC/wECAUkBXgH/2AABAQFIAV0B/wFP
-        AecB/gH/AVgB6gH8Af8BVwHpAfsB/wFXAekB+wH/AVcB6QH7Af8BVwHpAfsB/wFYAeoB/AH/AU8B5wH+
-        Af8BAQFIAV0B/9kAAUEBVAH/AT8BzgHmAf8BQwHQAeIB/wFCAc8B4gH/AUIBzwHiAf8BQgHPAeIB/wFC
-        Ac8B4gH/AUMB0AHiAf8BPgHPAeYB/wEAAUEBVAH/2QABOQFNAf8BLAG4AdEB/wEtAbgBzgH/AS0BtwHN
-        Af8BLQG3Ac0B/wEtAbcBzQH/AS0BtwHNAf8BLQG4Ac4B/wEsAbgB0QH/AQABOQFNAf/ZAAEzAUUB/wEc
-        AaIBugH/ARkBngG2Af8BFQGdAbQB/wEVAZ0BtAH/ARUBnQG0Af8BFQGdAbQB/wEZAZ4BtgH/ARwBogG6
-        Af8BAAEzAUUB/9kAASoBPAH/ATQBogG2Af8BPAGkAbYB/wE7AaIBtQH/ATkBogG1Af8BOQGiAbUB/wE7
-        AaIBtQH/ATwBpAG2Af8BNAGiAbYB/wEAASwBPgH/2QABIgE0Af8BUAGoAbgB/wGCAbIBvwH/AYABsAG+
-        Af8BgAGwAb4B/wGAAbABvgH/AYABsAG+Af8BggGyAb8B/wFQAagBuAH/AQABIwE1Af/ZAAEbASsB/wFQ
-        AaIBsAH/AZABtgHBAf8BjgG0Ab8B/wGOAbQBvwH/AY4BtAG/Af8BjgG0Ab8B/wGQAbYBwQH/AVABogGw
-        Af8BAAEaASoB/9kAARYBJQH/AQABFwEmAf8BAAEXASYB/wEAARcBJgH/AQABFwEmAf8BAAEXASYB/wEA
-        ARcBJgH/AQABFwEmAf8BAAEXASYB/wEAARcBJgH//wD/AP8A/wD/AP8A3gABRgEnAQAB/wFVAS8BAAH/
-        AVsBNAEAAf8BWwEzAQAB/wFbATMBAAH/AVsBMwEAAf8BWwEzAQAB/wFbATQBAAH/AVUBLwEAAf8BRwEn
-        AQAB/xkAAUQBEAH/AQEBUwEXAf8BAwFYARkB/wECAVgBGQH/AQIBWAEZAf8BAgFYARkB/wECAVgBGQH/
-        AQMBWAEZAf8BAQFTARcB/wEAAUUBEAH/GAABOAEyASkB/wFBAToBMQH/AUcBQAE2Af8BRwFAATYB/wFH
-        AUABNgH/AUcBQAE2Af8BRwFAATYB/wFHAUABNgH/AUEBOgExAf8BOAEyASkB/xoAAVYB/wEIAQcBggH/
-        AgoBiQH/AQoBCQGIAf8BCgEJAYgB/wEKAQkBiAH/AQoBCQGIAf8CCgGJAf8BCAEHAYIB/wIAAVcB/xgA
-        AU4BKwEAAv8BwgFEAv8BygFVAf8B/gHJAVQB/wH+AckBVAH/Af4ByQFUAf8B/gHJAVQC/wHKAVUC/wHB
-        AUQB/wFPASsBAAH/GQABTAETAf8BRwH/AZoB/wFUAf8BqwH/AVIB/wGqAf8BUgH/AaoB/wFSAf8BqgH/
-        AVIB/wGqAf8BVAH/AasB/wFHAf8BmgH/AQABTAEVAf8YAAE9ATcBLgH/AdsBzwG2Af8B4QHWAbsB/wHg
-        AdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeEB1gG7Af8B2wHOAbYB/wE9ATYBLQH/GAABAwEC
-        AV4B/wFcAYAC/wGGAZEC/wGFAY8C/wGFAY8C/wGFAY8C/wGFAY8C/wGGAZEC/wFbAYAC/wEDAQIBXgH/
-        GAABTQEqAQAB/wHvAbEBPwH/Ae0BuAFNAf8B7AG3AUwB/wHsAbcBTAH/AewBtwFMAf8B7AG3AUwB/wHt
-        AbgBTQH/Ae8BsQE/Af8BTQEpAQAB/xkAAUoBEgH/AT8B6QGRAf8BSgHmAZwB/wFJAeUBmwH/AUkB5QGb
-        Af8BSQHlAZsB/wFJAeUBmwH/AUoB5gGcAf8BPwHpAZEB/wEAAUoBEgH/GAABPAE2AS0B/wHJAb0BqAH/
-        Ac0BwgGrAf8BzAHAAaoB/wHMAcABqgH/AcwBwAGqAf8BzAHAAaoB/wHNAcIBqwH/AckBvQGoAf8BPAE2
-        AS0B/xgAAQIBAQFdAf8BTwFYAf4B/wFYAYIB/AH/AVcBgQH7Af8BVwGBAfsB/wFXAYEB+wH/AVcBgQH7
-        Af8BWAGCAfwB/wFPAVgB/gH/AQIBAQFdAf8YAAFEASMBAAH/AdQBnQEzAf8B0QGgATsB/wHRAZ8BOQH/
-        AdEBnwE5Af8B0QGfATkB/wHRAZ8BOQH/AdEBoAE7Af8B1AGdATMB/wFEASMBAAH/GQABQQEMAf8BMgHR
-        AV8B/wE4Ac8BhAH/ATcBzgGDAf8BNwHOAYMB/wE3Ac4BgwH/ATcBzgGDAf8BOAHPAYQB/wEyAdEBXwH/
-        AQABQQEMAf8YAAE2ATABJwH/AbUBrAGXAf8BtQGtAZkB/wG1AawBmAH/AbUBrAGYAf8BtQGsAZgB/wG1
-        AawBmAH/AbUBrQGZAf8BtQGsAZcB/wE2AS8BJwH/GgABVAH/AT8BRQHmAf8BQwFNAeIB/wFCAUsB4gH/
-        AUIBSwHiAf8BQgFLAeIB/wFCAUsB4gH/AUMBTQHiAf8BPgFFAeYB/wIAAVQB/xgAATsBHAEAAf8BuwGH
-        ASIB/wG6AYcBJQH/AbkBhwElAf8BuQGHASUB/wG5AYcBJQH/AbkBhwElAf8BugGHASUB/wG7AYcBIgH/
-        ATsBHAEAAf8ZAAE5AQoB/wEiAbcBTAH/ASUBtAFOAf8BJQG0AU4B/wElAbQBTgH/ASUBtAFOAf8BJQG0
-        AU4B/wElAbQBTgH/ASIBtwFMAf8BAAE5AQoB/xgAATABKQEiAf8BoQGXAYYB/wGgAZYBhQH/AaABlgGF
-        Af8BoAGWAYUB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGhAZcBhgH/ATABKQEiAf8aAAFNAf8BLAEw
-        AdEB/wEtATMBzgH/AS0BMwHNAf8BLQEzAc0B/wEtATMBzQH/AS0BMwHNAf8BLQEzAc4B/wEsATAB0QH/
-        AgABTQH/GAABMgEWAQAB/wGiAVYBFgH/AZ8BUwEUAf8BmwFQAREB/wGbAVABEQH/AZsBUAERAf8BmwFQ
-        AREB/wGfAVMBFAH/AaIBVgEWAf8BMgEWAQAB/xkAATABBQH/ARcBnwE7Af8BFQGbATkB/wESAZkBNgH/
-        ARIBmQE2Af8BEgGZATYB/wESAZkBNgH/ARUBmwE5Af8BFwGfATsB/wEAATABBQH/GAABKQEjARwB/wGN
-        AYQBWAH/AYoBgQFVAf8BhwFfAVIB/wGHAV8BUgH/AYcBXwFSAf8BhwFfAVIB/wGKAYEBVQH/AY0BhAFY
-        Af8BKQEjARwB/xoAAUUB/wEcASABugH/ARkBHQG2Af8BFQEaAbQB/wEVARoBtAH/ARUBGgG0Af8BFQEa
-        AbQB/wEZAR0BtgH/ARwBIAG6Af8CAAFFAf8YAAEpAQ4BAAH/AZ8BXgEyAf8BoQGEATsB/wGgAYIBOQH/
-        AZ8BgQE4Af8BnwGBATgB/wGgAYIBOQH/AaEBhAE7Af8BnwFeATIB/wEpARABAAH/GQABJwEAAf8BNAGd
-        AUsB/wE9AZ8BUwH/ATsBngFRAf8BOQGdAVAB/wE5AZ0BUAH/ATsBngFRAf8BPQGfAVMB/wE0AZ0BSwH/
-        AQABJwEAAf8YAAEiAR0BFwH/AZQBjgGDAf8BlwGRAYkB/wGWAZABhwH/AZUBjwGGAf8BlQGPAYYB/wGW
-        AZABhwH/AZcBkQGJAf8BlAGOAYMB/wEiAR0BFwH/GgABPAH/ATQBNQG2Af8BPAE+AbYB/wE7ATwBtQH/
-        ATkBOgG1Af8BOQE6AbUB/wE7ATwBtQH/ATwBPgG2Af8BNAE1AbYB/wIAAT4B/xgAAR8BBwEAAf8BpQGO
-        AVMB/wGuAZoBhAH/Aa0BmgGCAf8BrQGaAYIB/wGtAZoBggH/Aa0BmgGCAf8BrgGaAYQB/wGlAY4BUwH/
-        AR8BBgEAAf8ZAAEdAQAB/wFTAaQBgQH/AYUBrQGQAf8BgwGsAY8B/wGDAawBjwH/AYMBrAGPAf8BgwGs
-        AY8B/wGFAa0BkAH/AVQBpAGBAf8BAAEeAQAB/xgAARsBFQEQAf8BoAGbAZUB/wGqAaYBogH/AaoBpgGh
-        Af8BqgGmAaEB/wGqAaYBoQH/AaoBpgGhAf8BqgGmAaIB/wGgAZsBlQH/ARsBFQEQAf8aAAE0Af8CUAG4
-        Af8CggG/Af8CgAG+Af8CgAG+Af8CgAG+Af8CgAG+Af8CggG/Af8CUAG4Af8CAAE1Af8YAAETAgAB/wGc
-        AYsBVgH/AbABpQGUAf8BrwGjAZIB/wGvAaMBkgH/Aa8BowGSAf8BrwGjAZIB/wGwAaUBlAH/AZwBigFW
-        Af8BFAIAAf8ZAAESAQAB/wFXAZsBgAH/AZUBsQGdAf8BkwGvAZsB/wGTAa8BmwH/AZMBrwGbAf8BkwGv
-        AZsB/wGVAbEBnQH/AVUBmwGAAf8BAAETAQAB/xgAAREBDQEJAf8BmwGXAZMB/wGxAa8BrAH/Aa8BrQGq
-        Af8BrwGtAaoB/wGvAa0BqgH/Aa8BrQGqAf8BsQGvAawB/wGbAZcBkwH/ARIBDQEJAf8aAAErAf8CUAGw
-        Af8CkAHBAf8CjgG/Af8CjgG/Af8CjgG/Af8CjgG/Af8CkAHBAf8CUAGwAf8CAAEqAf8YAAEPAgAB/wEO
-        AgAB/wEOAgAB/wEOAgAB/wEOAgAB/wEOAgAB/wEOAgAB/wEOAgAB/wEOAgAB/wEQAgAB/xkAAQ8BAAH/
-        AQABDQEAAf8BAAENAQAB/wEAAQ0BAAH/AQABDQEAAf8BAAENAQAB/wEAAQ0BAAH/AQABDQEAAf8BAAEN
-        AQAB/wEAARABAAH/GAABDwELAQYB/wEOAQoBBAH/AQ4BCQEFAf8BDgEJAQQB/wEOAQkBBAH/AQ4BCQEE
-        Af8BDgEJAQQB/wEOAQkBBQH/AQ4BCgEEAf8BEAEMAQgB/xoAASUB/wIAASYB/wIAASYB/wIAASYB/wIA
-        ASYB/wIAASYB/wIAASYB/wIAASYB/wIAASYB/wIAASYB//8A/wD/AA8AAUIBTQE+BwABPgMAASgDAAFA
-        AwABIAMAAQEBAAEBBgABARYAA/8BAAL/BgAC/wYAAv8GAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHg
-        AQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAL/BgAC/wYAAv8GABj/AeABBwHgAQcB4AEH
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACu
+        EAAAAk1TRnQBSQFMAgEBBQEAARABAQEQAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIP8A/wD/ACIAAUABUwH/AQQBSwGCAf8BBwFSAYkB/wEGAVABiAH/AQYBUAGI
+        Af8BBgFQAYgB/wEGAVABiAH/AQcBUgGJAf8BBAFLAYIB/wEAAUEBVAH/2QABRgFbAf8BWQHnAv8BhgHv
+        Av8BhQHuAv8BhQHuAv8BhQHuAv8BhQHuAv8BhgHvAv8BWAHoAv8BAAFGAVsB/9kAAUUBWgH/AUwB5wH+
+        Af8BVQHqAfwB/wFUAekB+wH/AVQB6QH7Af8BVAHpAfsB/wFUAekB+wH/AVUB6gH8Af8BTAHnAf4B/wEA
+        AUUBWgH/2QABPgFRAf8BPAHOAeYB/wFAAdAB4gH/AT8BzwHiAf8BPwHPAeIB/wE/Ac8B4gH/AT8BzwHi
+        Af8BQAHQAeIB/wE7Ac8B5gH/AQABPgFRAf/ZAAE2AUoB/wEpAbgB0QH/ASoBuAHOAf8BKgG3Ac0B/wEq
+        AbcBzQH/ASoBtwHNAf8BKgG3Ac0B/wEqAbgBzgH/ASkBuAHRAf8BAAE2AUoB/9kAATABQgH/ARkBogG6
+        Af8BFgGeAbYB/wESAZ0BtAH/ARIBnQG0Af8BEgGdAbQB/wESAZ0BtAH/ARYBngG2Af8BGQGiAboB/wEA
+        ATABQgH/2QABJwE5Af8BMQGiAbYB/wE5AaQBtgH/ATgBogG1Af8BNgGiAbUB/wE2AaIBtQH/ATgBogG1
+        Af8BOQGkAbYB/wExAaIBtgH/AQABKQE7Af/ZAAEfATEB/wFNAagBuAH/AYIBsgG/Af8BgAGwAb4B/wGA
+        AbABvgH/AYABsAG+Af8BgAGwAb4B/wGCAbIBvwH/AU0BqAG4Af8BAAEgATIB/9kAARgBKAH/AU0BogGw
+        Af8BkAG2AcEB/wGOAbQBvwH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AZABtgHBAf8BTQGiAbAB/wEA
+        ARcBJwH/2QABEwEiAf8BAAEUASMB/wEAARQBIwH/AQABFAEjAf8BAAEUASMB/wEAARQBIwH/AQABFAEj
+        Af8BAAEUASMB/wEAARQBIwH/AQABFAEjAf//AP8A/wD/AP8A/wDeAAFDASQBAAH/AVIBLAEAAf8BWAEx
+        AQAB/wFYATABAAH/AVgBMAEAAf8BWAEwAQAB/wFYATABAAH/AVgBMQEAAf8BUgEsAQAB/wFEASQBAAH/
+        GQABQQENAf8BAAFQARQB/wEAAVUBFgH/AQABVQEWAf8BAAFVARYB/wEAAVUBFgH/AQABVQEWAf8BAAFV
+        ARYB/wEAAVABFAH/AQABQgENAf8YAAE1AS8BJgH/AT4BNwEuAf8BRAE9ATMB/wFEAT0BMwH/AUQBPQEz
+        Af8BRAE9ATMB/wFEAT0BMwH/AUQBPQEzAf8BPgE3AS4B/wE1AS8BJgH/GgABUwH/AQUBBAGCAf8CBwGJ
+        Af8BBwEGAYgB/wEHAQYBiAH/AQcBBgGIAf8BBwEGAYgB/wIHAYkB/wEFAQQBggH/AgABVAH/GAABSwEo
+        AQAC/wHCAUEC/wHKAVIB/wH+AckBUQH/Af4ByQFRAf8B/gHJAVEB/wH+AckBUQL/AcoBUgL/AcEBQQH/
+        AUwBKAEAAf8ZAAFJARAB/wFEAf8BmgH/AVEB/wGrAf8BTwH/AaoB/wFPAf8BqgH/AU8B/wGqAf8BTwH/
+        AaoB/wFRAf8BqwH/AUQB/wGaAf8BAAFJARIB/xgAAToBNAErAf8B2wHPAbYB/wHhAdYBuwH/AeAB1QG6
+        Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4QHWAbsB/wHbAc4BtgH/AToBMwEqAf8aAAFbAf8BWQGA
+        Av8BhgGRAv8BhQGPAv8BhQGPAv8BhQGPAv8BhQGPAv8BhgGRAv8BWAGAAv8CAAFbAf8YAAFKAScBAAH/
+        Ae8BsQE8Af8B7QG4AUoB/wHsAbcBSQH/AewBtwFJAf8B7AG3AUkB/wHsAbcBSQH/Ae0BuAFKAf8B7wGx
+        ATwB/wFKASYBAAH/GQABRwEPAf8BPAHpAZEB/wFHAeYBnAH/AUYB5QGbAf8BRgHlAZsB/wFGAeUBmwH/
+        AUYB5QGbAf8BRwHmAZwB/wE8AekBkQH/AQABRwEPAf8YAAE5ATMBKgH/AckBvQGoAf8BzQHCAasB/wHM
+        AcABqgH/AcwBwAGqAf8BzAHAAaoB/wHMAcABqgH/Ac0BwgGrAf8ByQG9AagB/wE5ATMBKgH/GgABWgH/
+        AUwBVQH+Af8BVQGCAfwB/wFUAYEB+wH/AVQBgQH7Af8BVAGBAfsB/wFUAYEB+wH/AVUBggH8Af8BTAFV
+        Af4B/wIAAVoB/xgAAUEBIAEAAf8B1AGdATAB/wHRAaABOAH/AdEBnwE2Af8B0QGfATYB/wHRAZ8BNgH/
+        AdEBnwE2Af8B0QGgATgB/wHUAZ0BMAH/AUEBIAEAAf8ZAAE+AQkB/wEvAdEBXAH/ATUBzwGEAf8BNAHO
+        AYMB/wE0Ac4BgwH/ATQBzgGDAf8BNAHOAYMB/wE1Ac8BhAH/AS8B0QFcAf8BAAE+AQkB/xgAATMBLQEk
+        Af8BtQGsAZcB/wG1Aa0BmQH/AbUBrAGYAf8BtQGsAZgB/wG1AawBmAH/AbUBrAGYAf8BtQGtAZkB/wG1
+        AawBlwH/ATMBLAEkAf8aAAFRAf8BPAFCAeYB/wFAAUoB4gH/AT8BSAHiAf8BPwFIAeIB/wE/AUgB4gH/
+        AT8BSAHiAf8BQAFKAeIB/wE7AUIB5gH/AgABUQH/GAABOAEZAQAB/wG7AYcBHwH/AboBhwEiAf8BuQGH
+        ASIB/wG5AYcBIgH/AbkBhwEiAf8BuQGHASIB/wG6AYcBIgH/AbsBhwEfAf8BOAEZAQAB/xkAATYBBwH/
+        AR8BtwFJAf8BIgG0AUsB/wEiAbQBSwH/ASIBtAFLAf8BIgG0AUsB/wEiAbQBSwH/ASIBtAFLAf8BHwG3
+        AUkB/wEAATYBBwH/GAABLQEmAR8B/wGhAZcBhgH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGF
+        Af8BoAGWAYUB/wGgAZYBhQH/AaEBlwGGAf8BLQEmAR8B/xoAAUoB/wEpAS0B0QH/ASoBMAHOAf8BKgEw
+        Ac0B/wEqATABzQH/ASoBMAHNAf8BKgEwAc0B/wEqATABzgH/ASkBLQHRAf8CAAFKAf8YAAEvARMBAAH/
+        AaIBUwETAf8BnwFQAREB/wGbAU0BDgH/AZsBTQEOAf8BmwFNAQ4B/wGbAU0BDgH/AZ8BUAERAf8BogFT
+        ARMB/wEvARMBAAH/GQABLQECAf8BFAGfATgB/wESAZsBNgH/AQ8BmQEzAf8BDwGZATMB/wEPAZkBMwH/
+        AQ8BmQEzAf8BEgGbATYB/wEUAZ8BOAH/AQABLQECAf8YAAEmASABGQH/AY0BhAFVAf8BigGBAVIB/wGH
+        AVwBTwH/AYcBXAFPAf8BhwFcAU8B/wGHAVwBTwH/AYoBgQFSAf8BjQGEAVUB/wEmASABGQH/GgABQgH/
+        ARkBHQG6Af8BFgEaAbYB/wESARcBtAH/ARIBFwG0Af8BEgEXAbQB/wESARcBtAH/ARYBGgG2Af8BGQEd
+        AboB/wIAAUIB/xgAASYBCwEAAf8BnwFbAS8B/wGhAYQBOAH/AaABggE2Af8BnwGBATUB/wGfAYEBNQH/
+        AaABggE2Af8BoQGEATgB/wGfAVsBLwH/ASYBDQEAAf8ZAAEkAQAB/wExAZ0BSAH/AToBnwFQAf8BOAGe
+        AU4B/wE2AZ0BTQH/ATYBnQFNAf8BOAGeAU4B/wE6AZ8BUAH/ATEBnQFIAf8BAAEkAQAB/xgAAR8BGgEU
+        Af8BlAGOAYMB/wGXAZEBiQH/AZYBkAGHAf8BlQGPAYYB/wGVAY8BhgH/AZYBkAGHAf8BlwGRAYkB/wGU
+        AY4BgwH/AR8BGgEUAf8aAAE5Af8BMQEyAbYB/wE5ATsBtgH/ATgBOQG1Af8BNgE3AbUB/wE2ATcBtQH/
+        ATgBOQG1Af8BOQE7AbYB/wExATIBtgH/AgABOwH/GAABHAEEAQAB/wGlAY4BUAH/Aa4BmgGEAf8BrQGa
+        AYIB/wGtAZoBggH/Aa0BmgGCAf8BrQGaAYIB/wGuAZoBhAH/AaUBjgFQAf8BHAEDAQAB/xkAARoBAAH/
+        AVABpAGBAf8BhQGtAZAB/wGDAawBjwH/AYMBrAGPAf8BgwGsAY8B/wGDAawBjwH/AYUBrQGQAf8BUQGk
+        AYEB/wEAARsBAAH/GAABGAESAQ0B/wGgAZsBlQH/AaoBpgGiAf8BqgGmAaEB/wGqAaYBoQH/AaoBpgGh
+        Af8BqgGmAaEB/wGqAaYBogH/AaABmwGVAf8BGAESAQ0B/xoAATEB/wJNAbgB/wKCAb8B/wKAAb4B/wKA
+        Ab4B/wKAAb4B/wKAAb4B/wKCAb8B/wJNAbgB/wIAATIB/xgAARACAAH/AZwBiwFTAf8BsAGlAZQB/wGv
+        AaMBkgH/Aa8BowGSAf8BrwGjAZIB/wGvAaMBkgH/AbABpQGUAf8BnAGKAVMB/wERAgAB/xkAAQ8BAAH/
+        AVQBmwGAAf8BlQGxAZ0B/wGTAa8BmwH/AZMBrwGbAf8BkwGvAZsB/wGTAa8BmwH/AZUBsQGdAf8BUgGb
+        AYAB/wEAARABAAH/GAABDgEKAQYB/wGbAZcBkwH/AbEBrwGsAf8BrwGtAaoB/wGvAa0BqgH/Aa8BrQGq
+        Af8BrwGtAaoB/wGxAa8BrAH/AZsBlwGTAf8BDwEKAQYB/xoAASgB/wJNAbAB/wKQAcEB/wKOAb8B/wKO
+        Ab8B/wKOAb8B/wKOAb8B/wKQAcEB/wJNAbAB/wIAAScB/xgAAQwCAAH/AQsCAAH/AQsCAAH/AQsCAAH/
+        AQsCAAH/AQsCAAH/AQsCAAH/AQsCAAH/AQsCAAH/AQ0CAAH/GQABDAEAAf8BAAEKAQAB/wEAAQoBAAH/
+        AQABCgEAAf8BAAEKAQAB/wEAAQoBAAH/AQABCgEAAf8BAAEKAQAB/wEAAQoBAAH/AQABDQEAAf8YAAEM
+        AQgBAwH/AQsBBwEBAf8BCwEGAQIB/wELAQYBAQH/AQsBBgEBAf8BCwEGAQEB/wELAQYBAQH/AQsBBgEC
+        Af8BCwEHAQEB/wENAQkBBQH/GgABIgH/AgABIwH/AgABIwH/AgABIwH/AgABIwH/AgABIwH/AgABIwH/
+        AgABIwH/AgABIwH/AgABIwH//wD/AP8ADwABQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEB
+        FgAD/wEAAv8GAAL/BgAC/wYAAeABBwYAAeABBwYAAeABBwYAAeABBwYAAeABBwYAAeABBwYAAeABBwYA
+        AeABBwYAAeABBwYAAeABBwYAAv8GAAL/BgAC/wYAGP8B4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
         AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
         AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
-        AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBxj/Cw==
+        AeABBwHgAQcB4AEHGP8L
 </value>
   </data>
   <metadata name="MainStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
